# rust_var_zeroed

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
